src/snapshots/afrotd__parser__tests__rule_html_7.3.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            7.3.1 Legaler Vorwärtspass
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Team A darf einen Vorwärtspass während jedes Scrimmage Downs
                werfen, bevor der Team Ballbesitz wechselt, vorausgesetzt, der
                Pass wird von einem Punkt in oder hinter der neutralen Zone
                geworfen.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.7.3.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
