src/snapshots/afrotd__parser__tests__rule_html_7.3.12.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            7.3.12 Persönliche Fouls und unsportliche Verhalten-Fouls
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                durch Team B während eines legalen VorwärtspassSpieles Für
                persönliche Fouls und unsportliches Verhalten durch Team B
                während eines legalen Vorwärtspass-Spieles gilt folgende
                Regelung: Bei einem vollständigen Vorwärtspass wird die Strafe
                vom Ende des letzten Laufes durchgeführt, wenn dieser jenseits
                der neutralen Zone endet. Ist der Pass unvollständig oder
                abgefangen oder ereignet sich während des Downs ein Team
                Ballbesitzwechsel, wird die Strafe vom Previous Spot
                durchgeführt (Regel 9.1 Strafe und Regel 9.2.1 Strafe) (A.R.
                7.3.12.I und 9.1.2.III). Regel 8 Punkte
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.7.3.12"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
