src/snapshots/afrotd__parser__tests__rule_html_7.3.3.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            7.3.3 Berechtigung zum Berühren eines legalen Vorwärtspasses
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Die Regeln, die zum Berühren eines Vorwärtspasses
                berechtigen, gelten während eines Downs, in dem ein legaler
                Vorwärtspass geworfen wird.
                </li>
                <li>Alle Team B-Spieler sind berechtigt, einen Vorwärtspasses
                zu fangen oder zu berühren.
                </li>
                <li>Wenn der Ball gesnappt wurde, sind folgende Team A-Spieler
                berechtigt:
                    <ol type="1">
                        <li>jeder Lineman, der sich am Ende seiner Scrimmage
                        Line aufgestellt hat und eine andere Nummer als 50 bis
                        79 trägt
                        </li>
                        <li>jeder Back, der eine andere Nummer als 50 bis 79
                        trägt.
                        </li>
                    </ol>
                </li>
                <li>Ein berechtigter Team A-Spieler verliert seine
                Berechtigung, wenn er ins Aus geht (Regel 7.3.4) (A.R.
                7.3.9.III).
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.7.3.3"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
