src/snapshots/afrotd__parser__tests__rule_html_7.3.4.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            7.3.4 Verlust der Berechtigung durch Verlassen des Feldes
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Kein berechtigter Offense Receiver, der während eines Downs das
                Feld verlässt und wieder inbounds zurückkehrt, darf einen
                legalen Vorwärtspass im Feld oder während er sich in der Luft
                befindet, berühren, bis der Ball von einem Gegner oder einem
                Schiedsrichter berührt wurde (A.R. 7.3.4.I, 7.3.4.II und
                7.3.4.IV). (Ausnahme: Das gilt nicht für einen ursprünglich
                berechtigten Offense Spieler, der sofort versucht, wieder ins
                Feld zu gelangen, nachdem er aufgrund des Kontaktes durch einen
                Gegner ins Aus gegangen ist (A.R. 7.3.4.III)). Wenn er einen
                Vorwärtspass berührt, bevor er inbounds zurückkehrt, ist das
                ein unvollständiger Pass (Regel 7.3.7) und kein Foul für
                illegales Berühren.
            </p>
            <p>
                <strong>Strafe: Downverlust am Previous Spot [S16 und
                S9].</strong>
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.7.3.4"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
