src/snapshots/afrotd__parser__tests__rule_html_7.3.5.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            7.3.5 Berechtigung erlangt oder wiedererlangt
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Berührt ein Team B-Spieler oder ein Schiedsrichter einen
                legalen Vorwärtspass, werden alle Spieler berechtigt (A.R.
                7.3.5.I).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.7.3.5"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
