src/snapshots/afrotd__parser__tests__rule_html_7.3.6.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            7.3.6 Vollständiger Pass
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Jeder Vorwärtspass ist vollständig, wenn er von einem Spieler
                des passenden Teams, der sich inbounds befindet, gefangen wird.
                Der Ball bleibt im Spiel, es sei denn, der Vorwärtspass wird in
                der gegnerischen Endzone vollständig oder gleichzeitig von
                gegnerischen Spielern gefangen. Wenn ein Vorwärtspass
                gleichzeitig von gegnerischen Spielern inbounds gefangen wird,
                wird der Ball dead und gehört dem passenden Team (Regel 2.4.3
                und 2.4.4) (A.R 2.4.3.III und 7.3.6.I bis 7.3.6.VIII).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.7.3.6"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
